# ORMTool

./: .gitignore  CMakeLists.txt  README.md
dev_ops/: build.bat  clean.bat  configure.bat
shaders/: blur.frag  fullscreen_quad.vert
src/: main.cpp
src/App/: App.cpp  App.h
src/IO/: IOService.cpp  IOService.h
src/MVC/: BoilerplateMacro.h  IController.h  IModel.h  IView.h
src/UI/: UIManager.cpp  UIManager.h
src/Utils/: Constants.h
